--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='http://code.jquery.com/jquery.js')
+    script(type='text/javascript', src='/javascripts/widget/lib/jquery-1.7.1.min.js')
+    script(type='text/javascript', src='/javascripts/widget/lib/jquery.ui.core.min.js')
+    script(type='text/javascript', src='/javascripts/widget/lib/jquery.ui.widget.min.js')
+    script(type='text/javascript', src='/javascripts/widget/lib/jquery.ui.rcarousel.min.js')
+    link(type='text/css', rel='stylesheet', href='/javascripts/widget/css/rcarousel.css')
     block scripts
     block content
